# commune-rs

./: .env.example  .env.old  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Justfile  README.md  commune-example.toml  commune.toml  docker-compose.yml  flake.nix  rust-toolchain.toml
app/: Cargo.toml
app/src/: api.rs  error.rs  main.rs  router.rs
app/src/api/: ping.rs  proxy.rs  rooms.rs  ruma.rs
app/src/api/rooms/: aliases.rs  info.rs
commune/: Cargo.toml
commune/src/: api.rs  main.rs  router.rs
commune/src/api/: ping.rs  ruma.rs  transactions.rs
crates/core/: Cargo.toml
crates/core/src/: account.rs  config.rs  direct.rs  error.rs  helpers.rs  lib.rs  profile.rs  session.rs  spaces.rs  util.rs
crates/core/src/account/: email.rs  error.rs  login.rs  logout.rs  model.rs  password.rs  register.rs  service.rs  token.rs  username.rs  whoami.rs
crates/core/src/auth/: error.rs  mod.rs  model.rs  service.rs
crates/core/src/direct/: create.rs
crates/core/src/events/: error.rs  mod.rs  service.rs
crates/core/src/mail/: error.rs  mod.rs  service.rs
crates/core/src/mail/templates/: verification_code.hbs
crates/core/src/membership/: join.rs  leave.rs
crates/core/src/profile/: avatar.rs  avatar_url.rs  display_name.rs  displayname.rs
crates/core/src/room/: error.rs  model.rs  service.rs
crates/core/src/rooms/: create.rs
crates/core/src/session/: login.rs  logout.rs  register.rs  service.rs  username_available.rs
crates/core/src/spaces/: create.rs
crates/core/src/spaces/channels/: create.rs
crates/core/src/user/: error.rs  model.rs  service.rs
crates/core/src/util/: mod.rs  opaque_id.rs  secret.rs  time.rs
crates/matrix/: Cargo.toml
crates/matrix/src/: admin.rs  client.rs  error.rs  event_filter.rs  filter.rs  http.rs  lib.rs
crates/matrix/src/admin/: client.rs  mod.rs  room.rs  rooms.rs  session.rs  user.rs
crates/matrix/src/admin/registration_tokens/: new.rs
crates/matrix/src/admin/resources/: mod.rs  room.rs  user.rs  user_id.rs
crates/matrix/src/admin/resources/token/: shared_secret.rs
crates/matrix/src/admin/room/: delete_room.rs  get_members.rs  get_room.rs  get_rooms.rs  get_state.rs
crates/matrix/src/admin/rooms/: delete.rs  delete_status.rs  get.rs  get_many.rs
crates/matrix/src/admin/session/: get_nonce.rs  register.rs
crates/matrix/src/admin/user/: get_user.rs  get_user_by_3pid.rs  get_users.rs  set_user.rs
crates/matrix/src/client/: account.rs  create_room.rs  login.rs  logout.rs  mod.rs  mxc.rs  profile.rs  register.rs  room.rs  session.rs  uiaa.rs
crates/matrix/src/client-backup/: account.rs.bk.bk  membership.rs.bk.bk  mod.rs.bk.bk  rooms.rs.bk.bk  session.rs.bk.bk.bk  sync.rs.bk.bk  uiaa.rs.bk.bk
crates/matrix/src/client/account/: password.rs  whoami.rs
crates/matrix/src/client/directory/: room.rs
crates/matrix/src/client/logout/: root.rs
crates/matrix/src/client/membership/: join.rs  leave.rs
crates/matrix/src/client/profile/: avatar_url.rs  displayname.rs
crates/matrix/src/client/profile/avatar_url/: get.rs  update.rs
crates/matrix/src/client/profile/display_name/: get.rs  update.rs
crates/matrix/src/client/register/: available.rs  root.rs  token.rs
crates/matrix/src/client/register/token/: validity.rs
crates/matrix/src/client/resources/: error.rs  events.rs  login.rs  mod.rs  mxc.rs  room.rs  session.rs  thirdparty.rs
crates/matrix/src/client/room/: ban_from_room.rs  create_room.rs  forget_room.rs  get_rooms.rs  join_room.rs  kick_from_room.rs  leave_room.rs  unban_from_room.rs
crates/matrix/src/client/rooms/: state.rs
crates/matrix/src/client/rooms/state/: create.rs  get.rs  get_many.rs
crates/matrix/src/client/session/: get_flows.rs  login.rs  logout.rs  register.rs  username_available.rs  whoami.rs
crates/matrix/src/space/: board.rs  content_serde.rs  mod.rs  state.rs
crates/matrix/src/token/: mod.rs  shared_secret.rs
crates/router/: Cargo.toml
crates/router/src/: api.rs  config.rs  lib.rs  main.rs
crates/router/src/api/: account.rs  profile.rs  register.rs  relative.rs
crates/router/src/api/account/: avatar.rs  display_name.rs  password.rs
crates/router/src/api/direct/: create.rs
crates/router/src/api/membership/: join.rs
crates/router/src/api/profile/: avatar_url.rs  displayname.rs  root.rs
crates/router/src/api/register/: available.rs  email.rs  root.rs
crates/router/src/api/relative/: login.rs  logout.rs  register.rs
crates/router/src/api/rooms/: create.rs  root.rs
crates/router/src/api/session/: login.rs  logout.rs  register.rs  username_available.rs
crates/router/src/api/spaces/: root.rs
crates/router/src/api/spaces/channels/: create.rs
crates/router/src/router/api/: mod.rs
crates/router/src/router/api/v1/: mod.rs
crates/router/src/router/api/v1/account/: login.rs  root.rs  session.rs  verify_code.rs
crates/router/src/router/middleware/: auth.rs
crates/server/: Cargo.toml
crates/server/src/: config.rs  lib.rs  services.rs
crates/server/src/router/: mod.rs
crates/server/src/router/api/: mod.rs
crates/server/src/router/api/v1/: mod.rs
crates/server/src/router/api/v1/account/: create.rs  (+7 more)
crates/server/src/router/middleware/: auth.rs  mod.rs
crates/test/: Cargo.toml
crates/test/fixtures/synapse/: homeserver.yaml  matrix.localhost.log.config  matrix.localhost.signing.key
crates/test/src/: api.rs  env.rs  environment.rs  lib.rs  login.rs  register.rs  util.rs
crates/test/src/api/: profile.rs
crates/test/src/api/account/: avatar.rs  avatar_url.rs  display_name.rs  email.rs  password.rs  whoami.rs
crates/test/src/api/profile/: avatar_url.rs  displayname.rs
crates/test/src/api/relative/: available.rs  login.rs  logout.rs  register.rs
crates/test/src/api/rooms/create/: direct.rs
crates/test/src/api/spaces/: create.rs
crates/test/src/commune/room/: create.rs
crates/test/src/matrix/: events.rs  mod.rs  room.rs  room_admin.rs  room_client.rs  shared_token_registration.rs  util.rs
crates/test/src/tools/: environment.rs  http.rs  maildev.rs  mod.rs
xtask/: Cargo.toml
xtask/src/: main.rs
(+28 files in other folders)
