[workspace.package]
description = "Rust implementation of the Commune server."
edition = "2018"
homepage = "https://commune.sh"
license = "Apache-2.0"
name = "commune"
readme = "README.md"
repository = "https://github.com/commune-os/commune-rs"
rust-version = "1.75.0"

[workspace]
members = ["crates/core", "crates/matrix", "crates/router", "crates/test"]
default-members = ["crates/router"]
resolver = "2"

[workspace.dependencies]
axum-extra = { version = "0.9.3", features = ["typed-header"] }
async-trait = "0.1.74"
# async-stream = "0.3.5"
bytes = "1.5.0"
email_address = { version = "0.2.4", features = ["serde", "serde_support"] }
figment = { version = "0.10.14", features = ["toml", "env"] }
hex = "0.4.3"
tokio-rustls = "0.25.0"
# futures = "0.3.30"
hmac = "0.12.1"
sha1 = "0.10.6"
anyhow = "1.0.75"
axum = { version = "0.7.4", features = ["tokio", "macros"] }
http = "1.1.0"
mime = "0.3.17"
mail-send = "0.4.7"
maud = "0.26.0"
headers = "0.4.0"
# openssl = { version = "0.10.63", features = ["vendored"] }
# openssl-sys = { version = "0.9.99", features = ["vendored"] }
reqwest = { version = "0.11.22", default-features = false, features = [
  "json",
  "multipart",
  "rustls",
] }
serde = "1.0.192"
serde_json = "1.0.114"
time = "0.3.34"
tokio = "1.34.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
url = "2.4.1"
rand = "0.8.5"
thiserror = "1.0.50"
validator = { version = "0.16", features = ["derive"] }

router = { workspace = true, path = "crates/router" }
matrix = { workspace = true, path = "crates/matrix" }
commune = { workspace = true, path = "crates/core" }

ruma-events = { version = "0.27.11", default_features = false, features = [
  "html",
  "markdown",
] }
ruma-common = { version = "0.12.0", default_features = false, features = [
  "api",
  "rand",
] }
ruma-macros = { version = "0.12.0", default_features = false }
ruma-client = { version = "0.12.0", default_features = false }
ruma-identifiers-validation = { version = "0.9.3", default_features = false }

[workspace.lints.rust]
unreachable_pub = "warn"
unsafe_code = "forbid"
unused_qualifications = "warn"

[workspace.lints.clippy]
cloned_instead_of_copied = "warn"
dbg_macro = "warn"
keyword_idents = "warn"
large_types_passed_by_value = "warn"
mismatching_type_param_order = "warn"
needless_collect = "warn"
needless_pass_by_value = "warn"
print_stdout = "warn"
redundant_closure_for_method_calls = "warn"
redundant_type_annotation = "warn"
str_to_string = "warn"
to_string_in_format_args = "warn"
unsafe_code = "forbid"
unused_async = "warn"
unused_results = "warn"
unwrap_used = "warn"
wildcard_imports = "warn"

[profile.dev]
opt-level = 1
incremental = true
lto = 'off'

[profile.release]
lto = 'thin'
incremental = true

[profile.release.build-override]
opt-level = 3
[profile.release.package."*"]
opt-level = 3
