[workspace.package]
name = "commune"
edition = "2021"
version = "0.0.0"
readme = "README.md"
license = "Apache-2.0"

description = "Rust implementation of the Commune server."
homepage = "https://commune.sh"
repository = "https://github.com/commune-os/commune-rs"

keywords = ["matrix", "chat", "messaging", "federation", "social", "community"]

[workspace]
members = ["app", "xtask"]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.40.0", features = [
  "fs",
  "macros",
  "signal",
  "sync",
  "rt-multi-thread",
] }

axum = { version = "0.7.7", default-features = false, features = [
  "form",
  "http1",
  "http2",
  "json",
  "matched-path",
  "tracing",
  "macros",
] }
axum-server = { version = "0.7.1", features = ["tls-rustls-no-provider"] }

tower = { version = "0.5.1", features = ["buffer", "util"] }
tower-http = { version = "0.6.1", features = [
  "add-extension",
  "cors",
  "follow-redirect",
  "map-request-body",
  "sensitive-headers",
  "set-header",
  "timeout",
  "trace",
  "util",
] }

ruma = { git = "https://github.com/ruma/ruma", branch = "main", features = [
  "compat",
  "rand",
  "appservice-api-s",
  "client-api",
  "federation-api",
  "server-util",
  "state-res",
  "unstable-msc2448",
  "unstable-msc3575",
  "unstable-exhaustive-types",
  "ring-compat",
  "unstable-unspecified",
] }

thiserror = "1.0.64"

http = "1.1.0"
http-body-util = "0.1.2"

tracing = { version = "0.1.40", features = [] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }

rand = "0.8.5"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.132"

bytes = "1.7.2"
sled = "0.34.7"

hyper = { version = "1.5.0", features = ["full"] }
hyper-util = { version = "0.1.9", features = ["full"] }

headers = "0.4.0"

# [patch.'https://github.com/ruma/ruma']
# ruma = { path = "./ruma", package = "/ruma" }

[profile.dev]
incremental = true
opt-level = 1
lto = 'off'

# NOTE: you might have to adjust the value for opt-level, as it
# comes with the drawback of less useful error messages for dependencies.
[profile.dev.package."*"]
opt-level = 3

[profile.release]
incremental = true
opt-level = 3
lto = 'thin'

[profile.release.package."*"]
opt-level = 3

[workspace.lints.rust]
unreachable_pub = "warn"
unsafe_code = "forbid"
unused_qualifications = "warn"

[workspace.lints.clippy]
cloned_instead_of_copied = "warn"
dbg_macro = "warn"
keyword_idents = "warn"
large_types_passed_by_value = "warn"
mismatching_type_param_order = "warn"
needless_collect = "warn"
needless_pass_by_value = "warn"
print_stdout = "warn"
redundant_closure_for_method_calls = "warn"
redundant_type_annotation = "warn"
str_to_string = "warn"
to_string_in_format_args = "warn"
unsafe_code = "forbid"
unused_async = "warn"
unused_results = "warn"
unwrap_used = "warn"
wildcard_imports = "warn"
