[package]
name = "commune"
edition = { workspace = true }
version = { workspace = true }
readme = { workspace = true }
license = { workspace = true }

description = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

keywords = { workspace = true }

[dependencies]
tokio = { workspace = true }
axum = { workspace = true }
axum-server = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
ruma = { workspace = true }
thiserror = { workspace = true }
http.workspace = true
http-body-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
bytes = { workspace = true }
sled = { workspace = true }
headers = { workspace = true }

hyper = { workspace = true }
hyper-util = { workspace = true }

[lints]
workspace = true
