[package]
name = "core"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
name = "commune"
path = "src/lib.rs"

[dependencies]
# Workspace Dependencies
handlebars = { workspace = true }
lettre = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }
validator = { workspace = true, features = ["derive"] }
http = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true, features = ["serde"] }
url = { workspace = true, features = ["serde"] }
tokio = { workspace = true, features = ["full"] }

# Local Dependencies
matrix = { path = "../matrix", features = ["client", "server"] }
figment = { version = "0.10.14", features = ["toml"] }
