[package]
name = "core"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
name = "commune"
path = "src/lib.rs"

[dependencies]
# Workspace Dependencies
anyhow = { workspace = true }
axum = { workspace = true }
rand = { workspace = true }
email_address = { workspace = true }
thiserror = { workspace = true }
validator = { workspace = true, features = ["derive"] }
http = { workspace = true }
mail-send = { workspace = true }
maud = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
figment = { workspace = true }
url = { workspace = true, features = ["serde"] }
tokio = { workspace = true, features = ["full"] }
headers = { workspace = true }
tokio-rustls = { workspace = true }

# Local Dependencies
matrix = { path = "../matrix", features = ["client"] }
