[package]
name = "matrix"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
name = "matrix"
path = "src/lib.rs"

[dependencies]
ruma-events = { version = "0.27.11", default_features = false, features = [
  "html",
  "markdown",
] }
ruma-common = { version = "0.12.0", default_features = false, features = [
  "api",
  "rand",
  "unstable-exhaustive-types",
] }
ruma-macros = { version = "0.12.0", default_features = false }
ruma-client = { version = "0.12.0", default_features = false }

# Workspace Dependencies
mime = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
sha1 = { workspace = true }
url = { workspace = true, features = ["serde"] }
hex = { workspace = true }
hmac = { workspace = true }
http.workspace = true
bytes = "1.5.0"
async-trait = "0.1.77"

[features]
client = []
server = []
