[package]
name = "router"
version = "0.0.0"
edition = "2021"
publish = false

[[bin]]
name = "commune-server"
path = "src/bin/main.rs"

[lib]
name = "router"
path = "src/lib.rs"

[dependencies]
# Workspace Dependencies
axum = { workspace = true, features = ["tokio"] }
anyhow = { workspace = true }
http = { workspace = true }
# openssl = { workspace = true, features = ["vendored"] }
# openssl-sys = { workspace = true, features = ["vendored"] }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
url = { workspace = true, features = ["serde"] }

# Local Dependencies
core = { path = "../core" }
