[package]
name = "server"
version = "0.0.0"
edition = "2021"
publish = false

[[bin]]
name = "server"
path = "src/bin/main.rs"

[lib]
name = "commune_server"
path = "src/lib.rs"

[dependencies]
serde_json = "1.0.108"

# Workspace Dependencies
axum = { workspace = true, features = ["tokio"] }
anyhow = { workspace = true }
dotenv = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

# Local Dependencies
core = { path = "../core" }
